@@ -19,11 +19,22 @@ module PluginAWeek #:nodoc:
         # 
         # The following +has_many+ associations are created for models that support
         # emailing:
+        # * +email_addresses+ - The email addresses of this model
+        # * +emails+ - A collection of Emails of which this model was the sender
         # * +email_recipients+ - A collection of EmailRecipients in which this record is a receiver
-        # * +unsent_emails+ - A collection of Emails which have not yet been sent
-        # * +sent_emails+ - A collection of Emails which have already been sent
         def has_email_addresses
-          create_email_address_associations(:many, :email_addresses)
+          has_many  :email_addresses,
+                      :class_name => 'EmailAddress',
+                      :as => :emailable,
+                      :dependent => :destroy
+          
+          # Add associations for all emails the model has sent and received
+          has_many  :emails,
+                      :through => :email_addresses
+          has_many  :email_recipients,
+                      :through => :email_addresses
+          
+          include PluginAWeek::Has::Emails::InstanceMethods
         end
         
         # Adds support for emailing instances of this model through a single
@@ -31,32 +42,19 @@ module PluginAWeek #:nodoc:
         # 
         # == Generated associations
         # 
-        # The following +has_many+ associations are created for models that support
-        # emailing:
+        # The following associations are created for models that support emailing:
+        # * +email_address+ - The email address of this model
+        # * +emails+ - A collection of Emails of which this model was the sender
         # * +email_recipients+ - A collection of EmailRecipients in which this record is a receiver
-        # * +unsent_emails+ - A collection of Emails which have not yet been sent
-        # * +sent_emails+ - A collection of Emails which have already been sent
         def has_email_address
-          create_email_address_associations(:one, :email_address)
-        end
-        
-        private
-        def create_email_address_associations(cardinality, association_id)
-          options = {
-            :class_name => 'EmailAddress',
-            :as => :emailable,
-            :dependent => :destroy
-          }
+          has_one :email_address,
+                    :class_name => 'EmailAddress',
+                    :as => :emailable,
+                    :dependent => :destroy
           
-          send("has_#{cardinality}", association_id, options)
-          
-          # Add associations for all emails the model has sent and received
-          has_many  :email_recipients,
-                      :through => :email_addresses
-          has_many  :unsent_emails,
-                      :through => :email_addresses
-          has_many  :sent_emails,
-                      :through => :email_addresses
+          delegate  :emails,
+                    :email_recipients,
+                      :to => :email_address
           
           include PluginAWeek::Has::Emails::InstanceMethods
         end
@@ -65,9 +63,19 @@ module PluginAWeek #:nodoc:
       module InstanceMethods
         # All emails this model has received
         def received_emails
-          email_recipients.find_in_states(:all, :unread, :read).collect do |recipient|
+          email_recipients.active.find_in_states(:all, :unread, :read, :include => :message, :conditions => ['messages.state_id = ?', Message.states.find_by_name('sent').id]).collect do |recipient|
             ReceivedMessage.new(recipient)
           end
+        end
+        
+        # All emails that have not yet been sent by this model (excluding any that have been deleted)
+        def unsent_emails(*args)
+          emails.active.unsent(*args)
+        end
+        
+        # All emails that have been sent by this model (excluding any that have been deleted)
+        def sent_emails(*args)
+          emails.active.find_in_states(:all, :queued, :sent, *args)
         end
         
         # Contains all of the emails that have been sent and received
