@@ -2,26 +2,29 @@ sent_from_bob:
   id: 1
   sender_id: 1
   sender_type: EmailAddress
+  sender_spec: bob@bob.com
   subject: "Funny joke"
   body: "Why can't dinosaurs talk? ...Because they're dead!"
   created_at: <%= Time.now.to_s(:db) %>
-  state_id: 501
+  state_id: 502
   type: Email
   
 sent_from_mary:
   id: 2
   sender_id: 3
   sender_type: EmailAddress
+  sender_spec: mary@mary.com
   subject: "FW: Funny joke"
   body: "> Why can't dinosaurs talk? ...Because they're dead!"
   created_at: <%= Time.now.to_s(:db) %>
-  state_id: 501
+  state_id: 502
   type: Email
   
 unsent_from_bob:
   id: 3
   sender_id: 1
   sender_type: EmailAddress
+  sender_spec: bob@bob.com
   subject: "Another funny joke"
   body: "Where do cows go on a date? ...To the moovies!"
   created_at: <%= Time.now.to_s(:db) %>
@@ -32,8 +35,18 @@ queued_from_bob:
   id: 4
   sender_id: 1
   sender_type: EmailAddress
+  sender_spec: bob@bob.com
   subject: ""
   body: ""
   created_at: <%= Time.now.to_s(:db) %>
   state_id: 501
+  type: Email
+  
+unsent_from_stranger:
+  id: 5
+  sender_spec: stranger@somewhere.com
+  subject: "Do you know where I am?"
+  body: "Just wondering..."
+  created_at: <%= Time.now.to_s(:db) %>
+  state_id: 500
   type: Email
